[FEAT]: ADD  CHECK WHETHERE DAY OR DATE LIST OF LECTURE IS NULL